--- a/Assignments/Module-2/site/styles.css
+++ b/Assignments/Module-2/site/styles.css
@@ -1,16 +1,14 @@
-
-
 * {
   box-sizing: border-box;
 }
 
-body{
-	margin: 0;
-	padding: 0;
-    font-family: "Helvetica", Serif, sans-serif;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Helvetica", Serif, sans-serif;
 }
 
-.row{
+.row {
   margin-top: 5%;
   margin-bottom: 5%;
 }
@@ -22,14 +20,12 @@ h1 {
   font-size: 50px;
 }
 
-
-.box{
+.box {
   width: 100%;
   overflow: none;
 }
 
-
-.content-name{
+.content-name {
   overflow: none;
   text-align: center;
   border: 2px solid black;
@@ -44,41 +40,41 @@ h1 {
   position: relative;
 }
 
-.content{
+.content {
   border: 3px solid black;
   width: 90%;
   height: auto;
   margin: 2.5%;
-  color: black
+  color: black;
   font-size: 25px;
   padding: 2%;
   padding-top: 55px;
   background-color: #fdff70;
 }
 
-.name1{
+.name1 {
   background-color: #f15aff;
 }
 
-.name2{
+.name2 {
   color: white;
   background-color: #f52e38;
 }
-.name3{
+.name3 {
   background-color: #3ebf28;
 }
-
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-4 {
-  	float: left;
+    float: left;
     width: 33.33%;
   }
 }
 /********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-6,.col-md-12 {
+  .col-md-6,
+  .col-md-12 {
     float: left;
   }
   .col-md-6 {
@@ -88,7 +84,7 @@ h1 {
     margin-left: -10px;
     width: 100%;
   }
-  .name3{
+  .name3 {
     margin-right: 65px;
     width: 100px;
   }
@@ -96,10 +92,10 @@ h1 {
 
 @media (min-width: 0px) and (max-width: 767px) {
   .col-sm-12 {
-  	float: left;
+    float: left;
     width: 100%;
   }
-  .content-name{
+  .content-name {
     margin-right: 30px;
   }
 }
